give floating labels correct spacing

--- a/_src/_assets/styles/bigchain/_forms.scss
+++ b/_src/_assets/styles/bigchain/_forms.scss
@@ -75,7 +75,7 @@
     &:invalid:not(.is-empty) ~ .form-label,
     &.parsley-error ~ .form-label,
     &.parsley-success ~ .form-label {
-        transform: translate3d(0, -($spacer), 0) scale(.75);
+        transform: translate3d(0, -($spacer + $input-padding-x), 0) scale(.75);
         transform-origin: left top;
     }
 }
